# rust-mongo-crud

./: Cargo.toml  readme.md
src/: common.rs  main.rs
src/common/: structs.rs
src/config/: database.rs
src/handlers/: item_handlers.rs  mod.rs
src/models/: item.rs
src/routes/: item_routes.rs  mod.rs
src/state/: app_state.rs
