[package]
name = "rust_mongo"
version = "0.1.0"
authors = ["Anurag Sharma"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
actix-web = "3.3.2"
dotenv = "0.15.0"
serde = "1.0.118"
bson = "1.1.0"
chrono = "0.4.19"
futures = "0.3.8"
