[package]
name = "rust_mongo"
version = "0.1.0"
authors = ["Anurag Sharma"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0", default-features = false, features=["async-std-runtime"] }
actix-web = "3.3.2"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
bson = { version = "2.0.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.16"
serde_json = "1.0.67"
