[package]
name = "rust_mongo"
version = "0.1.0"
authors = ["Anurag Sharma"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-contrib-logger = "0.1.0"
actix-web = "4.8.0"
anyhow = "1.0.86"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
http = "1.1.0"
log = "0.4.22"
mongodb = "3.0.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
